var searchData=
[
  ['call',['Call',['../structscanner_1_1Call.html',1,'scanner']]],
  ['call_3c_20proto_3a_3abulkjobparameters_2c_20proto_3a_3anewjobreply_20_3e',['Call&lt; proto::BulkJobParameters, proto::NewJobReply &gt;',['../structscanner_1_1Call.html',1,'scanner']]],
  ['channels',['channels',['../structscanner_1_1FrameInfo.html#a25adc459a68c0e03ff590e4fe35ffca3',1,'scanner::FrameInfo::channels()'],['../classscanner_1_1Frame.html#aeac1d7193e194629154326588447f961',1,'scanner::Frame::channels()']]],
  ['check_5fframe',['check_frame',['../classscanner_1_1VideoKernel.html#a3093e09ccb435487a4a57ce9486b3c21',1,'scanner::VideoKernel']]],
  ['columncompressionoptions',['ColumnCompressionOptions',['../structscanner_1_1internal_1_1ColumnCompressionOptions.html',1,'scanner::internal']]],
  ['columnenumerator',['ColumnEnumerator',['../classscanner_1_1internal_1_1ColumnEnumerator.html',1,'scanner::internal']]],
  ['columnsink',['ColumnSink',['../classscanner_1_1internal_1_1ColumnSink.html',1,'scanner::internal']]],
  ['columnsource',['ColumnSource',['../classscanner_1_1internal_1_1ColumnSource.html',1,'scanner::internal']]],
  ['condition',['Condition',['../classscanner_1_1Condition.html',1,'scanner']]],
  ['condition_3c_20state_20_3e',['Condition&lt; State &gt;',['../classscanner_1_1Condition.html',1,'scanner']]],
  ['cycletimer',['CycleTimer',['../classscanner_1_1CycleTimer.html',1,'scanner']]]
];
